# claude-bond

./: .gitignore  2026-03-29-claude-bond-design.md  2026-03-29-claude-bond-mvp.md  README.md  pyproject.toml
hooks/: session-end.sh  session-start.sh
src/claude_bond/: cli.py  profile.py
src/claude_bond/applier/: applier.py
src/claude_bond/cloud/: auto_push.py  gist_sync.py  three_way_merge.py
src/claude_bond/commands/: apply_cmd.py  auto_cmd.py  cloud_cmd.py  diff_cmd.py  doctor_cmd.py  edit_cmd.py  export_cmd.py  hooks_cmd.py  import_cmd.py  init_cmd.py  profile_cmd.py  review_cmd.py  status_cmd.py  sync_cmd.py  tacit_cmd.py
src/claude_bond/evolve/: detector.py  merger.py  run_detect.py  signal_collector.py  tacit.py
src/claude_bond/extractor/: interviewer.py  scanner.py
src/claude_bond/models/: bond.py
src/claude_bond/sync_engine/: git_sync.py  semantic_merge.py
src/claude_bond/utils/: claude_api.py  crypto.py  offline_classifier.py  security.py  update_check.py
tests/: test_applier.py  test_bond_model.py  test_claude_api.py  test_cloud.py  test_crypto.py  test_detector.py  test_diff_cmd.py  test_dimensions_v2.py  test_doctor_cmd.py  test_edit_cmd.py  test_export_import.py  test_git_sync.py  test_hooks_cmd.py  test_init_cmd.py  test_integration.py  test_interviewer.py  test_merger.py  test_profile.py  test_scanner.py  test_security.py  test_semantic_merge.py  test_signal_collector.py  test_status_cmd.py  test_tacit.py  test_three_way_merge.py
