[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-bond"
version = "0.1.0"
description = "Package your relationship with Claude. Make Claude recognize you on any device."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
bond = "claude_bond.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
